--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <button onclick="deleteAPost()">Delete A Post</button>
     <button onclick="patchAPost()">Update A Post</button>
 
+    <button onclick="newButton()">New Button</button>
+
     <div class="users-container">
       <ul id="users-list"></ul>
     </div>
@@ -23,5 +25,6 @@
     <script src="js/fetch.js"></script>
     <script src="js/app.js"></script>
     <script src="js/index.js"></script>
+    <script src="./js/new.js"></script>
   </body>
 </html>
